[package]
name = "asyncnal"
version = "0.1.0"
edition = "2024"

[dependencies]
async_fn_traits = "0.1.1"
crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
crossbeam-utils = "0.8.21"
haphazard = "0.1.8"
lfqueue = "0.5.0"
lockfree = "0.5.1"
owned-alloc = "0.2.0"
pin-project-lite = "0.2.16"
rsevents = "0.3.1"
tokio = "1.45.1"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
criterion = { version = "0.5", features = ["async", "async_tokio"] }

[target.'cfg(loomtest)'.dependencies]
loom = "0.7"
