[package]
name = "asyncnal"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-utils = "0.8.21"
lfqueue = "0.8.1"
pin-project = "1.1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["async", "async_tokio"] }
pollster = "0.4.0"
rsevents = "0.3.1"


[target.'cfg(loomtest)'.dependencies]
loom = "0.7"
